--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -4,8 +4,13 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  order_status: "pending"
+
+two:
+  order_status: "paid"
+
+three:
+  order_status: "cancelled"
+
+#TODO: Find out if order status has a fourth value....
