Fixed some more product test messes. Added mostly blank test to PaymentDetails. Wrote comments with suggestions into payment_detail.rb. Wrote incomplete yml fixture for product_test.

--- a/test/fixtures/payment_details.yml
+++ b/test/fixtures/payment_details.yml
@@ -1,11 +1,27 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
+#TODO: Add info for valid credit cards.
+one:
+  order_id: 25
+  buyer_name: "Ada Lovelace"
+  email: "ada@adadevacademy.com"
+  street: "Fourth Avenue"
+  city: "Seattle"
+  state: "WA"
+  zip: 12345
+  cc_four_digits: xxxx
+  cc_expiration_date: ????
+  time_placed: $$$$
 # column: value
 #
-two: {}
-#  column: value
+two:
+  order_id: 20
+  buyer_name: "Silke Saenger"
+  email: "mama@mama.com"
+  street: "Hauptstrasse"
+  city: "Hamburg"
+  state: "Germany"
+  zip: 54321
+  cc_four_digits: xxxx
+  cc_expiration_date: ????
+  time_placed: $$$$
