Added CVV to payment_detail test and mocked it in fixtures(still need to complete those; need someone who knows the algorithm to throw me some valid mock cc numbers). Added Merchant validations, test, and fixtures.

--- a/test/fixtures/merchants.yml
+++ b/test/fixtures/merchants.yml
@@ -4,8 +4,15 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+
+one:
+  user_name: "Gandalf"
+  email: "wizard@middleearth.com"
+  uid: 1
+  provider: "github"
+
+two:
+  user_name: "Dumbledore"
+  email: "wizard@hogwarts.com"
+  uid: 2
+  provider: "github"
