--- a/test/fixtures/payment_details.yml
+++ b/test/fixtures/payment_details.yml
@@ -12,8 +12,8 @@ one:
   cc_four_digits: xxxx
   cc_expiration_date: ????
   time_placed: $$$$
-# column: value
-#
+  CVV: ???
+
 two:
   order_id: 20
   buyer_name: "Silke Saenger"
@@ -25,3 +25,4 @@ two:
   cc_four_digits: xxxx
   cc_expiration_date: ????
   time_placed: $$$$
+  CVV: ???
