Changes to payment_detail - credit card expiration date is now a Datetime data type. Corresponding changes in fixture. Added some tests and fixtures to order.

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -13,4 +13,5 @@ two:
 three:
   order_status: "cancelled"
 
-#TODO: Find out if order status has a fourth value....
+four:
+  order_status: "completed"
