Some preliminary controller tests in Product

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -8,28 +8,28 @@ one:
   name: broomstick
   price: 15.0
   quantity: 1
-  merchant_id: 45
+  merchant: one
 
 two:
   name: savoflange
   price: 13.52
   quantity: 1
-  merchant_id: 46
+  merchant: two
 
 three:
   name: blorble
   price: 13.52
   quantity: 1
-  merchant_id: 46
+  merchant: two
 
 product_stock1:
   name: stocker
   price: 12.00
   quantity: 2
-  merchant_id: merchant_with_orders
+  merchant: merchant_with_orders
 
 product_stock2:
   name: stockings
   price: 13.00
   quantity: 2
-  merchant_id: merchant_with_orders
+  merchant: merchant_with_orders
