--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -59,3 +59,15 @@ filter_paid:
   order: filter_order_paid
   product: filter_product
   shipped: false
+
+not_shipped_item1:
+  quantity: 1
+  order: order_to_be_shipped
+  product: filter_product
+  shipped: false
+
+not_shipped_item2:
+  quantity: 1
+  order: order_to_be_shipped
+  product: filter_product
+  shipped: false
