--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -14,6 +14,11 @@ two:
   product_id: 36
   order_id: 89
 
+three:
+  quantity: 1
+  product_id: 38
+  order_id: 2
+
 reduce_quantity1:
   quantity: 1
   order: purchasing_order
