Added order_item and order fixtures. Changed redirect_to route in ship method.

--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -76,3 +76,9 @@ not_shipped_item2:
   order: order_to_be_shipped
   product: filter_product
   shipped: false
+
+not_shipped_item3:
+  quantity: 1
+  order: order_to_be_shipped2
+  product: filter_product
+  shipped: false
