--- a/test/fixtures/payment_details.yml
+++ b/test/fixtures/payment_details.yml
@@ -36,5 +36,19 @@ payment_card:
   zip: 12345
   cc_four_digits: xxxx
   cc_expiration_date: ????
-  time_placed: $$$$
+  time_placed: "2016-10-24 12:53:49 -0700"
   CVV: ???
+
+controller_test_card:
+  order: filter_order_complete_shipped
+  buyer_name: "Ada Lovelace"
+  email: "ada@adadevacademy.com"
+  street: "Fourth Avenue"
+  city: "Seattle"
+  state: "WA"
+  zip: 12345
+  cc_four_digits: xxxx
+  cc_expiration_date: ????
+  time_placed: "2016-10-24 12:53:49 -0700"
+  CVV: ???
+  
